# sensing-rigs-ros2

./: .gitignore  README.md  TODO.md  docker-compose.yaml  start_system.sh
ros2_ws/: launch.sh  rebuild.sh
ros2_ws/src/: requirements.txt
ros2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/custom_msgs/msg/: JsonString.msg  MonoIR.msg  StereoVO.msg
ros2_ws/src/general_nodes/debug_server/: package.xml  setup.cfg  setup.py
ros2_ws/src/general_nodes/debug_server/debug_server/: debug_server.py
ros2_ws/src/general_nodes/lifecycle_manager/: package.xml  setup.py
ros2_ws/src/general_nodes/lifecycle_manager/launch/: lifecycle_manager.launch.py  lifecycle_manager_launch.py
ros2_ws/src/general_nodes/lifecycle_manager/lifecycle_manager/: LifecycleCameraManager.py
ros2_ws/src/general_nodes/main_launch/: package.xml  setup.py
ros2_ws/src/general_nodes/main_launch/launch/: main_launch.py
ros2_ws/src/general_nodes/normalizator/: CMakeLists.txt  package.xml
ros2_ws/src/general_nodes/normalizator/config/: normalizator_node_config.yaml
ros2_ws/src/general_nodes/normalizator/include/normalizator/: normalizator_node.hpp
ros2_ws/src/general_nodes/normalizator/launch/: normalizator_node_launch.py
ros2_ws/src/general_nodes/normalizator/src/: normalizator_main.cpp  normalizator_node.cpp
ros2_ws/src/general_nodes/results_server/: setup.cfg  setup.py
ros2_ws/src/general_nodes/results_server/results_server/: results_server.py
ros2_ws/src/msg/dual_camera_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/msg/dual_camera_msgs/msg/: ImagePair.msg
ros2_ws/src/msg/modem_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/msg/modem_msgs/msg/: StereoIR.msg
ros2_ws/src/sensig_nodes/cv_algorithms/: package.xml  setup.py
ros2_ws/src/sensig_nodes/cv_algorithms/config/: mono_ir_config.yaml  stereo_ir_config.yaml
ros2_ws/src/sensig_nodes/cv_algorithms/cv_algorithms/: lc_node_mono_ir.py  lc_node_stereo_ir.py  lc_node_stereo_vo.py  methods_mono_ir.py  methods_stereo_ir.py  methods_stereo_vo.py
ros2_ws/src/sensig_nodes/cv_algorithms/cv_algorithms/models/: README.txt
ros2_ws/src/sensig_nodes/cv_algorithms/launch/: cv_algorithms_launch.py
ros2_ws/src/sensig_nodes/sensig_capture/: CMakeLists.txt  package.xml
ros2_ws/src/sensig_nodes/sensig_capture/config/: camera_config.yaml
ros2_ws/src/sensig_nodes/sensig_capture/launch/: camera.launch.py
ros2_ws/src/sensig_nodes/sensig_capture/src/: camera_node.cpp
ros2_ws/src/sensig_nodes/sensig_comm/normalizator/: CMakeLists.txt  package.xml
ros2_ws/src/sensig_nodes/sensig_comm/normalizator/src/: normalizator_sub.cpp
ros2_ws/src/sensig_nodes/sensig_preprocessing/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensig_nodes/sensig_preprocessing/sensig_preprocessing/: PreprocessingNode.py
ros2_ws/src/sensig_nodes/sensig_procesing/cv_mono_ir/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensig_nodes/sensig_procesing/cv_mono_ir/cv_mono_ir/: functions_mono_ir.py  publisher.py
ros2_ws/src/sensig_nodes/sensig_procesing/cv_stereo_ir/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensig_nodes/sensig_procesing/cv_stereo_ir/cv_stereo_ir/: image_processing.py  inference.py  models.py  publisher.py  stereo_capture.py
ros2_ws/src/sensig_nodes/sensig_procesing/cv_stereo_odometry/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensig_nodes/sensig_procesing/cv_stereo_odometry/cv_stereo_odometry/: odometry_functions.py  publisher.py
ros2_ws/src/sensig_nodes/test_receiver/: package.xml  setup.py
ros2_ws/src/sensig_nodes/test_receiver/test_receiver/: test_ImagePair.py  test_topics.py
ros2_ws/src/sensing_nodes/cv_algorithms/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensing_nodes/cv_algorithms/config/: mono_ir_config.yaml  stereo_ir_config.yaml  stereo_vo_config.yaml
ros2_ws/src/sensing_nodes/cv_algorithms/cv_algorithms/: lc_node_mono_ir.py  lc_node_stereo_ir.py  lc_node_stereo_vo.py
ros2_ws/src/sensing_nodes/cv_algorithms/launch/: cv_algorithms_launch.py
ros2_ws/src/sensing_nodes/sensing_capture/: CMakeLists.txt  package.xml
ros2_ws/src/sensing_nodes/sensing_capture/config/: camera_config.yaml
ros2_ws/src/sensing_nodes/sensing_capture/launch/: camera_launch.py
ros2_ws/src/sensing_nodes/sensing_capture/src/: camera_node.cpp
ros2_ws/src/sensing_nodes/sensing_preprocessing/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensing_nodes/sensing_preprocessing/sensing_preprocessing/: PreprocessingNode.py
ros2_ws/src/sensing_nodes/test_receiver/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensing_nodes/test_receiver/test_receiver/: test_ImagePair.py  test_topics.py
ros2_ws/src/servers/results_server/: package.xml
ros2_ws/src/utils/: camera_utils.py  param_utils.py  timelogger.py
