<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>normalizator</name>
    <version>0.0.1</version>
    <description>Package that receives C.V. outputs from their respective nodes, and produces a normalized output in .json format</description>
    <maintainer email="niccolo.pasetto@studenti.unipd.it">paz</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>rclcpp</depend>
    <depend>custom_msgs</depend>
    <depend>rclcpp_lifecycle</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
