<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sensing_capture</name>
    <version>0.0.1</version>
    <description>TODO: Package description</description>
    <maintainer email="68518128+Jacopix@users.noreply.github.com">ubuntu</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>sensor_msgs</depend>
    <depend>lifecycle_msgs</depend>
    <exec_depend>python3-opencv</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
